# mite

./: CMakeLists.txt  Makefile  README.md  Scrum Status Forms w Task List 2023.04.20 - Copy(1).xlsx  compile_flags.txt
include/: command.hpp  config.hpp  edit.hpp  file.hpp  lsp.hpp  screen.hpp  tree_sitter.hpp
src/: command.cpp  edit.cpp  file.cpp  lsp.cpp  main.cpp  screen.cpp  tree_sitter.cpp
